--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -53,7 +53,7 @@
     margin-left: 25px
   }
 
-  &__num{
+  &__num {
     position: absolute;
     width: 20px;
     height: 20px;
@@ -62,17 +62,127 @@
     top: -9px;
     right: -14px;
     font-size: 12px;
-    color:#fff;
+    color: #fff;
     text-align: center;
     line-height: 20px;
   }
 }
 
+.footer {
+  background-color: $bg;
+}
 
+.footer__top {
+  padding: 70px 0 40px;
+  border-bottom: 1px solid #ececec;
+  display: flex;
 
+  &-contact {
+    width: 230px;
+    margin-right: 70px;
+  }
 
+  &-nav {
+    width: 170px;
+    margin-right: 30px;
+  }
 
+  &-item-form {
+    max-width: 470px;
+  }
 
+  &-logo {
+    display: block;
+    margin-bottom: 33px;
+  }
+
+  &-adress,
+  &-email,
+  &-phone {
+    margin-bottom: 14px;
+    display: block;
+  }
+
+  &-social__list {
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+  }
+
+  &-social-link {
+    transition: all 0.3s;
+
+    path {
+      fill: $default;
+    }
+
+    &:hover {
+      path {
+        fill: $accent;
+      }
+    }
+  }
+
+  &-social-item+.footer__top-social-item {
+    padding-left: 18px;
+  }
+
+  &-title {
+    color: $title;
+    font-size: 22px;
+    line-height: 1;
+    @extend %roboto-400;
+    margin-bottom: 40px;
+  }
+
+  &-link {
+    display: block;
+    margin-bottom: 14px;
+  }
+
+  &-text {
+    margin-bottom: 25px;
+  }
+
+  &-form-input {
+    background-color: #fff;
+    max-width: 320px;
+    margin-right: 10px;
+    width: 100%;
+    border: none;
+    padding: 12px 10px 12px 15px;
+    box-shadow: 0px 7px 20px 0px rgba(192, 192, 192, 0.3);
+
+    &::placeholder {
+      color: $default;
+      font-size: 16px;
+    }
+  }
+
+  &-form-btn {
+    border: none;
+    background-color: $accent;
+    color: #fff;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 12px 22px;
+    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+  }
+}
+
+.footer__bottom {
+  height: 75px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 12px;
+
+  &-accept-img {
+    display: inline-block;
+    margin-left: 25px;
+    vertical-align: middle;
+  }
+}
 
 
 
