--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -22,24 +22,25 @@
     margin-left: 35px
   }
 
-  &__list-link {
-    color: $title;
-    padding-bottom: 1px;
-    transition: color 0.3s;
-    @extend %quicksand-400;
 
-    &:hover {
-      color: $accent;
-      border-bottom: 1px solid $accent;
-      @extend %quicksand-400;
-    }
-  }
+&__list-link {
+  color: $title;
+  padding: 0 2px 1px;
+  transition: color 0.3s;
+  @extend %roboto-400;
 
-  &__list-link--active {
+  &:hover {
     color: $accent;
     border-bottom: 1px solid $accent;
-    @extend %quicksand-500;
+    @extend %roboto-700;
   }
+}
+
+&__list-link--active {
+  color: $accent;
+  border-bottom: 1px solid $accent;
+  @extend %roboto-700;
+}
 }
 
 .user-nav {
@@ -78,8 +79,8 @@
   display: flex;
 
   &-contact {
-    width: 230px;
-    margin-right: 70px;
+    width: 250px;
+    margin-right: 50px;
   }
 
   &-nav {
