--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Quicksand-Regular', sana-serif;
+  font-family: 'Quicksand-Regular';
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -9,7 +9,7 @@
 }
 
 @font-face {
-  font-family: 'Quicksand-Medium', sana-serif;
+  font-family: 'Quicksand-Medium';
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -19,7 +19,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto-Regular', sana-serif;
+  font-family: 'Roboto-Regular';
   font-weight: 400;
   font-style: normal;
   font-display: swap;
