--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -29,7 +29,7 @@
 }
 
 @font-face {
-  font-family: 'Roboto-Bold', sana-serif;
+  font-family: 'Roboto-Bold';
   font-weight: 700;
   font-style: normal;
   font-display: swap;
