--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -26,3 +26,12 @@ $bg:#f6f6f6;
     sana-serif;
   font-weight: 700;
 }
+
+%btn{
+padding: 12px 26px;
+background-color: $accent;
+color: #fff;
+text-transform: uppercase;
+@extend %roboto-400;
+box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+}
