--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .header {
@@ -23,24 +24,24 @@
   }
 
 
-&__list-link {
-  color: $title;
-  padding: 0 2px 1px;
-  transition: color 0.3s;
-  @extend %roboto-400;
+  &__list-link {
+    color: $title;
+    padding: 0 2px 1px;
+    transition: color 0.3s;
+    @extend %roboto-400;
 
-  &:hover {
+    &:hover {
+      color: $accent;
+      border-bottom: 1px solid $accent;
+      @extend %roboto-700;
+    }
+  }
+
+  &__list-link--active {
     color: $accent;
     border-bottom: 1px solid $accent;
     @extend %roboto-700;
   }
-}
-
-&__list-link--active {
-  color: $accent;
-  border-bottom: 1px solid $accent;
-  @extend %roboto-700;
-}
 }
 
 .user-nav {
@@ -161,13 +162,9 @@
   }
 
   &-form-btn {
+    @extend %btn;
     border: none;
-    background-color: $accent;
-    color: #fff;
-    text-transform: uppercase;
     cursor: pointer;
-    padding: 12px 22px;
-    box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
   }
 }
 
@@ -185,7 +182,87 @@
   }
 }
 
+.top-slider {
+  background-color: $bg;
+  background-image: url('../images/top-slider-bg.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 65px 0 45px;
 
+  &__container {
+    max-width: 1560px;
+  }
+
+  &__content {
+    padding-left: 175px;
+    padding-top: 125px;
+  }
+
+  &__item {
+    display: flex !important;
+    justify-content: space-between;
+  }
+
+  &__title {
+    max-width: 670px;
+    margin-bottom: 35px;
+    font-size: 58px;
+    line-height: 1.172;
+    color: $title;
+    @extend %roboto-700;
+  }
+
+  &__text {
+    max-width: 470px;
+    margin-bottom: 55px;
+  }
+
+  &__link {
+    @extend %btn;
+    padding: 14px 35px;
+  }
+
+  .slick-dots {
+    display: flex;
+    justify-content: center;
+    margin-top: -70px;
+
+    li {
+      padding: 0 5px;
+      line-height: 0;
+      button {
+        padding: 0;
+        font-size: 0;
+        background-color: transparent;
+        width: 26px;
+        height: 26px;
+        border-radius:50%;
+        border: 1px solid transparent;
+        position: relative;
+        &::before{
+          content:'';
+          position: absolute;
+          width: 6px;
+          height: 6px;
+          border-radius:50%;
+          background-color: $default;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+        }
+      }
+
+      &.slick-active {
+        button {
+          border-color: $accent;
+          &::before{
+            background-color: $accent;
+          }
+        }
+      }
+    }
+  }
+}
 
 
 
