--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -184,7 +184,7 @@
 
 .top-slider {
   background-color: $bg;
-  background-image: url('../images/top-slider-bg.png');
+  background-image: url('../images/decor/top-slider-bg.png');
   background-repeat: no-repeat;
   background-size: cover;
   padding: 65px 0 45px;
@@ -230,21 +230,23 @@
     li {
       padding: 0 5px;
       line-height: 0;
+
       button {
         padding: 0;
         font-size: 0;
         background-color: transparent;
         width: 26px;
         height: 26px;
-        border-radius:50%;
+        border-radius: 50%;
         border: 1px solid transparent;
         position: relative;
-        &::before{
-          content:'';
+
+        &::before {
+          content: '';
           position: absolute;
           width: 6px;
           height: 6px;
-          border-radius:50%;
+          border-radius: 50%;
           background-color: $default;
           top: 50%;
           left: 50%;
@@ -255,7 +257,8 @@
       &.slick-active {
         button {
           border-color: $accent;
-          &::before{
+
+          &::before {
             background-color: $accent;
           }
         }
@@ -264,10 +267,137 @@
   }
 }
 
+.categories-info {
+  padding: 120px 0;
+  background-image: url('../images/decor/categories-left-bg.png');
+  background-repeat: no-repeat;
+  background-position: center left;
 
+  &__inner {
+    background-image: url('../images/decor/categories-right-bg.png');
+    background-repeat: no-repeat;
+    background-position: center right;
+  }
+}
 
+.info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+  position: relative;
+  ;
 
+  &::before,
+  &::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+  }
 
+  &::before {
+    background-image: url('../images/decor/info-before.svg');
+    top: -40px;
+    left: -45px;
+    width: 120px;
+    height: 121px;
+    z-index: -1;
+  }
+
+  &::after {
+    background-image: url('../images/decor/info-after.svg');
+    bottom: -23px;
+    right: -23px;
+    width: 65px;
+    height: 52px;
+  }
+
+  &__item {
+    background-color: #fff;
+    padding: 60px 30px;
+    width: 370px;
+    box-shadow: 20px 0px 60px 0px rgba(202, 202, 202, 0.35);
+  }
+
+  &__item-title {
+    margin: 35px 0 10px;
+    color: $title;
+    font-size: 22px;
+    @extend %roboto-400;
+  }
+}
+
+.categories {
+  &__items {
+    display: grid;
+    min-height: 635px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-gap: 30px;
+  }
+
+  &__item {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    padding-top: 35px;
+    padding-left: 40px;
+
+    &:nth-child(1) {
+      grid-row: span 2;
+
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: #5800e4;
+      }
+    }
+
+    &:nth-child(2) {
+      padding-top: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      grid-column: span 2;
+
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: $accent;
+      }
+    }
+
+    &:nth-child(3) {
+
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: #ffb534;
+      }
+    }
+
+    &:nth-child(4) {
+
+      .categories__item-subtitle,
+      .categories__link:hover {
+        color: #34c3ff;
+      }
+    }
+  }
+
+  &__item-subtitle {
+    margin-bottom: 5px;
+  }
+
+  &__item-title {
+    font-size: 22px;
+    color: $title;
+    margin-bottom: 16px;
+  }
+
+  &__link {
+    text-transform: uppercase;
+    transition: all 0.3s;
+    color: $title;
+    @extend %roboto-400;
+  }
+}
 
 
 
