--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -576,6 +576,74 @@
   margin: 0 auto;
 }
 
+.promo {
+  padding: 150px 0 160px;
+  text-align: center;
+  background-image: url('../images/promo-bg.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+
+  &__time {
+    display: none;
+  }
+
+  &__inner {
+    max-width: 570px;
+    width: 100%;
+    margin-left: auto;
+  }
+
+  &__subtitle {
+    color: $accent;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    font-size: 22px;
+  }
+
+  &__clock {
+    margin-top: 55px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__clock-item {
+    background-color: #FFF;
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    span {
+      font-size: 48px;
+      @extend %roboto-700;
+      margin: 10px 0 7px;
+      color: $title;
+    }
+  }
+
+  &__link {
+    text-transform: uppercase;
+    color: $title;
+    display: inline-block;
+    border: 1px solid $accent;
+    padding: 14px 27px;
+    margin-top: 55px;
+  }
+}
+
+.partners {
+  padding-top: 75px;
+
+  &__list {
+    height: 170px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
 
 
 
