--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -834,7 +834,7 @@
     align-items: center;
   }
 
-  &__content{
+  &__content {
     max-width: 570px;
     width: 100%;
   }
@@ -852,15 +852,51 @@
   }
 
   &__link {
-    background-color:$accent;
+    background-color: $accent;
     text-transform: uppercase;
     box-shadow: 0px 5px 25px 0px rgba(254, 62, 87, 0.35);
-    color:#fff;
+    color: #fff;
     padding: 14px 35px;
     @extend %roboto-400;
   }
 }
 
+.shop {
+  padding: 120px 0 105px;
+
+  &__inner {
+    display: flex;
+  }
+
+  &__filters {
+    width: 370px;
+    margin-right: 30px;
+  }
+}
+
+.filter {
+  &__item {
+    padding: 35px 30px 40px;
+    border: 1px solid #ececec;
+    margin-bottom: 40px;
+  }
+  &__title {
+    text-transform: uppercase;
+    font-size: 22px;
+    color:$title;
+    @extend %roboto-400;
+    margin-bottom: 35px;
+}
+
+.filter-search {
+  &__input{
+    border:none;
+    background-color:$bg;
+    padding: 0 5px 0 15px;
+    height: 50px;
+  }
+  }
+}
 
 
 
