--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -880,23 +880,40 @@
     border: 1px solid #ececec;
     margin-bottom: 40px;
   }
+
   &__title {
     text-transform: uppercase;
     font-size: 22px;
-    color:$title;
+    color: $title;
     @extend %roboto-400;
     margin-bottom: 35px;
+  }
 }
 
 .filter-search {
-  &__input{
-    border:none;
-    background-color:$bg;
+  &__form {
+    display: flex;
+  }
+
+  &__input {
+    border: none;
+    background-color: $bg;
     padding: 0 5px 0 15px;
     height: 50px;
   }
+
+  &__btn {
+    border: none;
+    background-color: $accent;
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
   }
 }
+
 
 
 
