--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -27,11 +27,19 @@ $bg:#f6f6f6;
   font-weight: 700;
 }
 
-%btn{
-padding: 12px 26px;
-background-color: $accent;
-color: #fff;
-text-transform: uppercase;
-@extend %roboto-400;
-box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+%btn {
+  padding: 12px 26px;
+  background-color: $accent;
+  color: #fff;
+  text-transform: uppercase;
+  @extend %roboto-400;
+  box-shadow: 0px 7px 20px 0px rgba(255, 17, 48, 0.3);
+}
+
+%checkbox-hidden {
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  position: absolute;
 }
