--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -899,6 +899,7 @@
     border: none;
     background-color: $bg;
     padding: 0 5px 0 15px;
+    width: 260px;
     height: 50px;
   }
 
@@ -913,6 +914,237 @@
     cursor: pointer;
   }
 }
+
+.filter-price {
+  &__label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 30px;
+  }
+
+  &__btn {
+    @extend %btn;
+    border: none;
+    cursor: pointer;
+  }
+}
+
+.irs--flat .irs-line {
+  top: 13px;
+  height: 4px;
+  background-color: #ececec;
+  border-radius: 0;
+}
+
+.irs--flat .irs-handle {
+  top: 0;
+  width: 30px;
+  height: 30px;
+  background-color: #fff;
+  box-shadow: 0px 0px 13px 0px rgba(90, 90, 90, 0.2);
+  cursor: pointer;
+}
+
+.irs--flat {
+  height: 30px;
+}
+
+.irs--flat .irs-bar {
+  top: 13px;
+  height: 5px;
+  background-color: $accent;
+}
+
+.irs--flat .irs-min,
+.irs--flat .irs-max,
+.irs--flat .irs-handle>i:first-child,
+.irs--flat .irs-from,
+.irs--flat .irs-to {
+  display: none;
+}
+
+.filter-color {
+  &__label {
+    padding-bottom: 20px;
+    border-bottom: 1px solid #ececec;
+    display: flex;
+    justify-content: space-between;
+
+    &+.filter-color__label {
+      padding-top: 20px;
+    }
+
+    &:last-child {
+      border-bottom: none;
+      padding-bottom: 0;
+    }
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+
+    &:checked+.filter-color__checkbox {
+      background-image: url('../images/icons/check-on.svg');
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+  }
+
+
+  &__checkbox {
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    margin-left: -16px;
+    margin-top: 7px;
+  }
+
+
+  &__checkbox--blue {
+    background-color: #00aeff;
+  }
+
+  &__checkbox--red {
+    background-color: #f52574;
+  }
+
+  &__checkbox--green {
+    background-color: #24d4ac;
+  }
+
+  &__checkbox--orange {
+    background-color: #ff7e00;
+  }
+
+  &__checkbox--black {
+    background-color: #000;
+  }
+
+  &__checkbox--purple {
+    background-color: #923899;
+  }
+}
+
+.filter-size {
+
+  &__label {
+    display: block;
+    padding-left: 35px;
+    margin-bottom: 20px;
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+
+    &:checked+.filter-size__checkbox {
+      background-image: url('../images/icons/check-size.svg');
+      border: none;
+
+      &+.filter-size__text {
+        color: $accent
+      }
+    }
+  }
+
+  &__checkbox {
+    width: 20px;
+    height: 20px;
+    border: 1px solid $default;
+    position: absolute;
+    margin-left: -35px;
+    margin-top: 3px;
+    border-radius: 50%;
+  }
+}
+
+.filter-category {
+  &__label {
+    display: block;
+    margin-bottom: 15px;
+    cursor: pointer;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+
+    &:checked+.filter-category__checkbox {
+      background-color: $accent;
+      color: #fff;
+    }
+  }
+
+  &__checkbox {
+    background-color: #f6f6f6;
+    color: $title;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px 20px;
+  }
+}
+
+.filter-popular {
+
+  &__label {
+    cursor: pointer;
+    display: inline-block;
+    margin-bottom: 20px;
+    margin-right: 8px;
+    padding: 10px 0;
+  }
+
+  &__input {
+    @extend %checkbox-hidden;
+
+    &:checked+.filter-popular__checkbox {
+      background-color: $accent;
+      color: #fff;
+      background-color: $accent;
+    }
+  }
+
+  &__checkbox {
+    border: 1px solid $default;
+    padding: 10px 20px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
